force-app/main/default/objects/Applicant__c/Applicant__c.object-meta.xml
<CustomObject>
    <label>応募者</label>
    <nameField>
        <displayFormat>AP-{YYYYMM}-{0000}</displayFormat>
        <label>応募者名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>