force-app/main/default/objects/Applicant__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <description>生年月日</description>
    <label>生年月日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>