force-app/main/default/objects/Applicant__c/fields/Comment1__c.field-meta.xml
<CustomField>
    <fullName>Comment1__c</fullName>
    <label>面談コメント１</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>