force-app/main/default/objects/Applicant__c/fields/Comment2__c.field-meta.xml
<CustomField>
    <fullName>Comment2__c</fullName>
    <label>InterviewDate2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>