force-app/main/default/objects/Applicant__c/fields/Comment3__c.field-meta.xml
<CustomField>
    <fullName>Comment3__c</fullName>
    <label>面談コメント３</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>