force-app/main/default/objects/Applicant__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>姓</description>
    <label>姓</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>