force-app/main/default/objects/Applicant__c/fields/FirstName_Kana__c.field-meta.xml
<CustomField>
    <fullName>FirstName_Kana__c</fullName>
    <label>姓（カナ）</label>
    <length>80</length>
    <type>Text</type>
</CustomField>