force-app/main/default/objects/Applicant__c/fields/HopeMonthSalary__c.field-meta.xml
<CustomField>
    <fullName>HopeMonthSalary__c</fullName>
    <label>希望月料</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>