force-app/main/default/objects/Applicant__c/fields/HopeYearSalary__c.field-meta.xml
<CustomField>
    <fullName>HopeYearSalary__c</fullName>
    <label>希望年給</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>