force-app/main/default/objects/Applicant__c/fields/InterviewDate1__c.field-meta.xml
<CustomField>
    <fullName>InterviewDate1__c</fullName>
    <label>面談日付１</label>
    <type>Date</type>
</CustomField>