force-app/main/default/objects/Applicant__c/fields/InterviewDate2__c.field-meta.xml
<CustomField>
    <fullName>InterviewDate2__c</fullName>
    <label>面談日付２</label>
    <type>Date</type>
</CustomField>