force-app/main/default/objects/Applicant__c/fields/InterviewPlanDate1__c.field-meta.xml
<CustomField>
    <fullName>InterviewPlanDate1__c</fullName>
    <label>面談予定日１</label>
    <type>Date</type>
</CustomField>