force-app/main/default/objects/Applicant__c/fields/InterviewPlanDate2__c.field-meta.xml
<CustomField>
    <fullName>InterviewPlanDate2__c</fullName>
    <label>面談予定日2</label>
    <type>Date</type>
</CustomField>