force-app/main/default/objects/Applicant__c/fields/InterviewPlanDate3__c.field-meta.xml
<CustomField>
    <fullName>InterviewPlanDate3__c</fullName>
    <label>面談予定日3</label>
    <type>Date</type>
</CustomField>