force-app/main/default/objects/Applicant__c/fields/LastGraduatedSchool__c.field-meta.xml
<CustomField>
    <fullName>LastGraduatedSchool__c</fullName>
    <label>最終卒業学校</label>
    <length>100</length>
    <type>Text</type>
</CustomField>