force-app/main/default/objects/Applicant__c/fields/Mail__c.field-meta.xml
<CustomField>
    <fullName>Mail__c</fullName>
    <label>メールアドレス</label>
    <length>80</length>
    <type>Text</type>
</CustomField>