force-app/main/default/objects/Applicant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>電話面談設定済</fullName>
            </value>
            <value>
                <fullName>電話面談済</fullName>
            </value>
            <value>
                <fullName>面談設定済</fullName>
            </value>
            <value>
                <fullName>面談済</fullName>
            </value>
            <value>
                <fullName>内部決定採用</fullName>
            </value>
            <value>
                <fullName>内部決定不採用</fullName>
            </value>
            <value>
                <fullName>採用</fullName>
            </value>
            <value>
                <fullName>不採用</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>