force-app/main/default/objects/Applicant__c/fields/Tel__c.field-meta.xml
<CustomField>
    <fullName>Tel__c</fullName>
    <label>電話番号</label>
    <type>Phone</type>
</CustomField>