force-app/main/default/objects/Applicant__c/fields/torihiki__c.field-meta.xml
<CustomField>
    <fullName>torihiki__c</fullName>
    <formula>Torihikisaki__r.Name</formula>
    <label>torihiki</label>
    <type>Text</type>
</CustomField>