force-app/main/default/objects/Applicant__c/fields/Torihikisaki__c.field-meta.xml
<CustomField>
    <fullName>Torihikisaki__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>応募者</relationshipLabel>
    <relationshipName>ApplicationzfEh</relationshipName>
    <type>Lookup</type>
</CustomField>