force-app/main/default/objects/Applicant__c/recordTypes/RecordType1.recordType-meta.xml
<RecordType>
    <fullName>RecordType1</fullName>
    <active>true</active>
    <description>人事部</description>
    <label>人事部</label>
</RecordType>