force-app/main/default/objects/Applicant__c/recordTypes/RecordType2.recordType-meta.xml
<RecordType>
    <fullName>RecordType2</fullName>
    <active>false</active>
    <description>営業部２</description>
    <label>営業部</label>
</RecordType>