force-app/main/default/objects/Applicant__c/validationRules/agecheckrul.validationRule-meta.xml
<ValidationRule>
    <fullName>agecheckrul</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c  &lt; 20</errorConditionFormula>
    <errorMessage>年齢の入力は確認してください。</errorMessage>
</ValidationRule>